Added uploading CSV functionality

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,11 @@
 
 <body>
     <div>
-        <H1>Test</H1>
+        <form method="post" enctype="multipart/form-data">
+            <label for="streams">Stream File:</label>
+            <input type="file" accept=".csv" name="streams"><br><br>
+            <input type="submit" value="Submit">
+          </form>
     </div>
 </body>
 </html>
